--- a/HybridAPIFlow/HybridAPIFlow/Views/Home/Index.cshtml
+++ b/HybridAPIFlow/HybridAPIFlow/Views/Home/Index.cshtml
@@ -76,6 +76,9 @@
     <img id="loading" class="text align-self-center p-2" src="~/Content/Images/loading.gif">
 </div>
 
+<div class="d-flex flex-column">
+    <div id="errorbox" class="text align-self-center p-2">Error running your Request!</div>
+</div>
 
 <div class="accordion" id="jsonReqRes" style="display:none">
     <div class="card">
@@ -134,7 +137,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body mh-100">
+            <div class="modal-body mh-10">
                 <div class="d-flex flex-column">
                     <img id="loadingXML" class="text align-self-center p-2" src="~/Content/Images/loading.gif">
                 </div>
